Version 0.7.1 (changes from aircrack-ng 0.7) - Released ?? ????? 2007:
* aircrack-ng: Hardcode CPUs number to 1 if detection fails
* airtun-ng: Fix compilation under FC6 (missing "linux/if.h" include).
* Added airoscript (from daouid)
* Makefiles: Fixed: make uninstall did not remove all files
* Updated spec file by David Bolt to be able to build RPM packages on FC, Mandriva and Suse distro
* Added WEP authentication example capture
* Added hostap kernel 2.6.18 patch
* Updated rtl8187 patch.
* Updated madwifi-ng patch.

Version 0.7 (changes from aircrack-ng 0.6.2) - Released 20 January 2007:
* Makefiles: Improved + added makefiles for other OS
* Makefiles: Fixed make install on Windows and MacOS
* airtun-ng: Creates a tuntap interface, through which ordinary IP frames can be injected
* aireplay-ng: Added fragmentation attack
* aireplay-ng: Added shared key authentication
* airmon-ng: Now detect the shell when installing
* airmon-ng: Added support for rtl8187
* aircrack-ng: Added WEP dictionnary attack
* aircrack-ng: Works with 802.11e QoS packets
* airodump-ng: Added MAC filtering
* airodump-ng: Now use the flaw in shared-key authentication 
	       to generate a xor file containing the prga recovered from a shared-key authentication
* airodump-ng: More information about encryption on the AP
* airodump-ng: Receive quality indicator
* airodump-ng: The way ESSID is given in the CSV file is more clear
* packetforge-ng: Set the TTL value in the ip header
* packetforge-ng: Close open file handles
* Special handling of spanning tree packets
* Added rtl8187 patch for injection
* Other bug fixes

Version 0.6.2 (changes from aircrack-ng 0.6.1) - Released 1 October 2006:
* aireplay-ng: Applied patch to inject packets with an ipw2200
* aircrack-ng: Fixed: show_wpa_stats() 1 byte array overflow
* aircrack-ng: Fixed a warning when compiling on 64bit inner_bruteforcer_thread()
* aircrack-ng: Changed -d option. It's now a mask (use XX for unknown bytes).